
[package]
edition = "2021"
name    = "css_gradient_parser"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lightningcss = { version = "1.0.0-alpha.71", features = ["serde"] }
napi         = { version = "3.0.0", default-features = false, features = ["napi8"] }
napi-derive  = "3.0.0"
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
